--- a/Lab8_MetroDeParis/bin/it/polito/tdp/metrodeparis/MetroDeParis.fxml
+++ b/Lab8_MetroDeParis/bin/it/polito/tdp/metrodeparis/MetroDeParis.fxml
@@ -1,7 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.metrodeparis.MetroDeParisController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" text="Laboratori Metro Paris">
+               <VBox.margin>
+                  <Insets left="300.0" />
+               </VBox.margin>
+            </Label>
+            <HBox spacing="7.0">
+               <children>
+                  <ImageView fitHeight="128.0" fitWidth="111.0" opacity="0.7">
+                     <image>
+                        <Image url="@../../../../../../../../Desktop/lab/1240845884245780857Anonymous_aiga_rail_transportation_svg_hi.png" />
+                     </image>
+                  </ImageView>
+                  <VBox spacing="10.0">
+                     <children>
+                        <Label text="Selezionare Stazione Partenza" />
+                        <ComboBox fx:id="comboPartenza" prefWidth="150.0" />
+                        <Label text="Selezionare Stazioen di arrivo" />
+                        <ComboBox fx:id="comboArrivo" prefWidth="150.0" />
+                     </children>
+                     <HBox.margin>
+                        <Insets left="7.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <Button disable="true" mnemonicParsing="false" onAction="#doCalcolaPercorso" text="Calcola Percorso">
+                     <HBox.margin>
+                        <Insets top="48.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <TextArea fx:id="txtPercorosoTempo">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </TextArea>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
