--- a/Lab8_MetroDeParis/bin/it/polito/tdp/metrodeparis/MetroDeParis.fxml
+++ b/Lab8_MetroDeParis/bin/it/polito/tdp/metrodeparis/MetroDeParis.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"fx:controller="it.polito.tdp.metrodeparis.MetroDeParisController">
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
